<resources>
    <string name="app_name" translatable="false">Thesel</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="JM_pwd">dwcqckylgqngqoxr</string>
    <string name="aar_save">Save</string>
    <string name="aar_paused">Paused</string>
    <string name="aar_recording">Recording</string>
    <string name="aar_playing">Playing</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="staffNameEt"><![CDATA[First & Last name]]></string>
    <string name="introductory_popup_text_default">Tap the Thesel icon in the top left corner of the screen to select a category.</string>
    <string name="secondRule">1. A Session lasts for 45 minutes. Therefore, make sure you are in a comfortable position and ensure your PHONE BATTERY LIFE is sufficient enough for an hour session. </string>
    <string name="thirdRule">2. Make sure you have a GOOD INTERNET CONNECTION for a smooth and successful session. </string>
    <string name="fourthRule">3. Please do not request for another counsellor immediately after a session has ended. Wait for 30minutes, then, you can send a request. </string>
    <string name="fifthRule">4. Exchange of phone numbers and emails is NOT ALLOWED on this app. If you do so, your account will be DEACTIVATED.</string>
    <string name="firstCounsellorRule">1.  A Session lasts for 45 minutes. Therefore, make sure you are in a comfortable position and ensure your PHONE BATTERY LIFE is sufficient enough for an hour session.</string>
    <string name="secondCounsellorRule">2.  If your phone goes off during a session, make sure you tap the EMPTY button when your phone comes back on.</string>
    <string name="thirdCounsellorRule">3.  Only use the second rule if your timer runs out before your phone comes back on.</string>
    <string name="fourthCounsellorRule">4.  The EMPTY button is used to remove your client from the seat at the end of a session, to allow other users send you requests.</string>
    <string name="fifthCounsellorRule">5.  Exchange of phone numbers and emails is NOT ALLOWED on this app. If you do so, your account will be DEACTIVATED.</string>
    <string name="sixthCounsellorRule">6.  As a counsellor, by tapping the LEAVE session button, your session will end completely. </string>
    <string name="seventhCounsellorRule">7. You can leave the session if a user has not replied your message 30 minutes after the beginning of the session.</string>
    <string name="aboutHearme1"><![CDATA[Thesel is a therapeutic tele-counselling platform that is available for people going through life challenging situations.]]></string>
    <string name="aboutHearme2">It is also a community for connecting with people who have gone through and overcome difficult experiences.</string>
    <string name="aboutHearme3">The tried and tested solutions used by such people will be available for the benefit of those currently in that state and seeking help.</string>
    <string name="aboutHearme4">The founding of Thesel was inspired by our personal battle experiences. </string>
    <string name="aboutHearme5">It is hope inspiring to know that you are not alone. </string>
    <string name="aboutHearme6">We have created a platform on which you can connect with experts and like-minded supportive people in the Thesel Community, on whose experience and knowledge you can leverage, to overcome your challenges. Overcoming yours, you are properly positioned to, in turn, help others </string>
    <string name="googlePlayServices"><a href="https://play.google.com/">Google Play Services</a></string>
    <string name="googleFirebaseAnalytics"><a href="https://firebase.google.com/terms/analytics">Google Analytics for Firebase</a></string>
    <string name="firebaseCrashlytics"><a href="https://firebase.google.com/terms/crashlytics">Firebase Crashlytics</a></string>
    <string name="privacyPolicy1">Skiplab Innovation built the Thesel app as a Freemium app. The therapeutic counselling service provided by the Thesel consultants is at a cost and is intended for use as is.
This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.
If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. we will not use or share your information with anyone except as described in this Privacy Policy.
The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Thesel unless otherwise defined in this Privacy Policy.</string>
    <string name="privacyPolicy2">For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information. The information that we request will be retained by us and used as described in this privacy policy.
The app does use third party services that may collect information used to identify you.</string>
    <string name="privacyPolicy3">Link to privacy policy of third party service providers used by the app</string>
    <string name="privacyPolicy5">we want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.</string>
    <string name="privacyPolicy6">Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device internal memory.
This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.</string>
    <string name="privacyPolicy7">we may employ third-party companies and individuals due to the following reasons:</string>
    <string name="termsofservice1">By downloading or using the app, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using the app. You’re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also shouldn’t try to translate the app into other languages, or make derivative versions. The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it, still belong to Thesel.</string>
    <string name="termsofservice2">Thesel is committed to ensuring that the app is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason. We will never charge you for the app or its services without making it very clear to you exactly what you’re paying for.</string>
    <string name="termsofservice3">The Thesel app stores and processes personal data that you have provided to us, in order to provide our Service. It’s your responsibility to keep your phone and access to the app secure. We therefore recommend that you do not jailbreak or root your phone, which is the process of removing software restrictions and limitations imposed by the official operating system of your device. It could make your phone vulnerable to malware/viruses/malicious programs, compromise your phone’s security features and it could mean that the Thesel app won’t work properly or at all.</string>
    <string name="termsofservice4">The app does use third party services that declare their own Terms and Conditions.</string>
    <string name="termsofservice5">Link to Terms and Conditions of third party service providers used by the app</string>
    <string name="termsofservice6">You should be aware that there are certain things that Thesel will not take responsibility for. Certain functions of the app will require the app to have an active internet connection. The connection can be Wi-Fi, or provided by your mobile network provider, but Thesel cannot take responsibility for the app not working at full functionality if you don’t have access to Wi-Fi, and you don’t have any of your data allowance left.</string>
    <string name="termsofservice7">If you’re using the app outside of an area with Wi-Fi, you should remember that your terms of the agreement with your mobile network provider will still apply. As a result, you may be charged by your mobile provider for the cost of data for the duration of the connection while accessing the app, or other third party charges. In using the app, you’re accepting responsibility for any such charges, including roaming data charges if you use the app outside of your home territory (i.e. region or country) without turning off data roaming. If you are not the bill payer for the device on which you’re using the app, please be aware that we assume that you have received permission from the bill payer for using the app.</string>
    <string name="termsofservice8">Along the same lines, Thesel cannot always take responsibility for the way you use the app i.e. You need to make sure that your device stays charged – if it runs out of battery and you can’t turn it on to avail the Service, Thesel cannot accept responsibility.</string>
    <string name="termsofservice9">With respect to Thesel’s responsibility for your use of the app, when you’re using the app, it’s important to bear in mind that although we endeavour to ensure that it is updated and correct at all times, we do rely on third parties to provide information to us so that we can make it available to you. Thesel accepts no liability for any loss, direct or indirect, you experience as a result of relying wholly on this functionality of the app.</string>
    <string name="termsofservice10">At some point, we may wish to update the app. The app is currently available on Android – the requirements for system(and for any additional systems we decide to extend the availability of the app to) may change, and you’ll need to download the updates if you want to keep using the app. Thesel does not promise that it will always update the app so that it is relevant to you and/or works with the Android version that you have installed on your device. However, you promise to always accept updates to the application when offered to you, We may also wish to stop providing the app, and may terminate use of it at any time without giving notice of termination to you. Unless we tell you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must stop using the app, and (if needed) delete it from your device.</string>
    <string name="termsofservice11">we may update our Terms and Conditions from time to time. Thus, you are advised to review this page periodically for any changes. we will notify you of any changes by posting the new Terms and Conditions on this page.</string>
    <string name="termsofservice12">These terms and conditions are effective as of 2020-05-20</string>
    <string name="termsofservice13">If you have any questions or suggestions about our Terms and Conditions, do not hesitate to contact us at contact@thesel.com.ng</string>
</resources>