<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile.AboutThesel">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:background="@drawable/profile_coverphoto2"
        android:backgroundTint="@color/colorTransparentWhite"
        android:backgroundTintMode="multiply"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:src="@drawable/thesel_logo"
                    android:layout_centerVertical="true"
                    android:layout_width="150dp"
                    android:layout_height="100dp" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_below="@id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="#fff"
                android:text="@string/aboutHearme1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="@string/aboutHearme2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="@string/aboutHearme3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:layout_marginTop="5dp"
                android:text="@string/aboutHearme4"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:layout_marginTop="5dp"
                android:text="@string/aboutHearme5"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:layout_marginTop="5dp"
                android:text="@string/aboutHearme6"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textStyle="bold"
                android:text="Therapeutic Counselling"
                android:textColor="#fff"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="#fff"
                android:text="Therapeutic Counselling on this platform is at a cost"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="#fff"
                android:text="We have 2 categories of Consultants; the standard rated and the premium rated."/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="#fff"
                android:text="Our services are charged for, on hourly basis and the hourly tariff varies, depending on whether the consultant is rated 'standard' or rated 'premium'."/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="#fff"
                android:text="The premium rated Consultants are pricier than those rated 'Standard'."/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:weightSum="2">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="Thesel"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="#fff" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="Lagos, Nigeria"
                        android:textColor="#fff" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="end"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="Job Opportunities"
                        android:textStyle="bold"
                        android:textColor="#fff" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="jobs@thesel.com.ng"
                        android:textAlignment="center"
                        android:textColor="#fff" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>